// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Om den avdøde Skal rendre selvstendig 1`] = `
<div>
  <form>
    <div
      class="sc-gueYoa qDReO"
    >
      <h1
        class="center navds-heading navds-heading--medium"
      >
        dinSituasjon.tittel
      </h1>
    </div>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <h1
        class="navds-heading navds-heading--small"
      >
        dinSituasjon.undertittel
      </h1>
      <p
        class="navds-body-long"
      >
        dinSituasjon.ingress
      </p>
    </fieldset>
    <div
      class="sc-ktEKTO kCFNgi"
      id="jobbStatus"
    >
      <fieldset
        aria-invalid="false"
        class="navds-checkbox-group navds-checkbox-group--medium navds-fieldset navds-fieldset--medium"
      >
        <legend
          class="navds-fieldset__legend navds-label"
        >
          dinSituasjon.jobbStatus
        </legend>
        <div
          class="navds-checkboxes"
        >
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              checked=""
              class="navds-checkbox__input"
              id="checkbox-r16"
              required=""
              type="checkbox"
              value="jobbStatus.arbeidstaker"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r16"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.arbeidstaker
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              checked=""
              class="navds-checkbox__input"
              id="checkbox-r17"
              required=""
              type="checkbox"
              value="jobbStatus.selvstendig"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r17"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.selvstendig
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              class="navds-checkbox__input"
              id="checkbox-r18"
              required=""
              type="checkbox"
              value="jobbStatus.underUtdanning"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r18"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.underUtdanning
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              class="navds-checkbox__input"
              id="checkbox-r19"
              required=""
              type="checkbox"
              value="jobbStatus.arbeidssoker"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r19"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.arbeidssoker
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              class="navds-checkbox__input"
              id="checkbox-r1a"
              required=""
              type="checkbox"
              value="jobbStatus.ingen"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r1a"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.ingen
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-fieldset__error"
          id="fieldset-error-r15"
        />
      </fieldset>
    </div>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-gueYoa qDReO"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.arbeidsforhold.tittel
        </h1>
      </div>
      <div
        class="navds-panel luft-under navds-panel--border"
      >
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            class="kol-75"
          >
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="arbeidsforhold[0].arbeidsgiver"
              >
                dinSituasjon.arbeidsforhold.arbeidsgiver
              </label>
              <input
                aria-invalid="false"
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="arbeidsforhold[0].arbeidsgiver"
                required=""
                type="text"
                value="Potetskreller AS"
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-r1b"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            class="sc-qRumB jUAonZ"
          >
            <div
              id="arbeidsforhold[0].ansettelsesforhold"
            >
              <div
                class="navds-form-field navds-form-field--medium"
              >
                <label
                  class="navds-form-field__label navds-label"
                  for="textField-r1c"
                >
                  dinSituasjon.arbeidsforhold.ansettelsesforhold
                </label>
                <div
                  class="navds-select__container"
                >
                  <select
                    aria-invalid="false"
                    class="navds-select__input navds-body-short navds-body--medium"
                    id="textField-r1c"
                  >
                    <option
                      value=""
                    >
                      felles.velg
                    </option>
                    <option
                      value="stillingType.fast"
                    >
                      stillingType.fast
                    </option>
                    <option
                      value="stillingType.midlertidig"
                    >
                      stillingType.midlertidig
                    </option>
                    <option
                      value="stillingType.sesongarbeid"
                    >
                      stillingType.sesongarbeid
                    </option>
                  </select>
                  <svg
                    aria-hidden="true"
                    class="navds-select__chevron"
                    fill="none"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  aria-live="polite"
                  aria-relevant="additions removals"
                  class="navds-form-field__error"
                  id="textField-error-r1c"
                />
              </div>
            </div>
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="arbeidsforhold[0].stillingsprosent"
              >
                dinSituasjon.arbeidsforhold.stillingsprosent
              </label>
              <input
                aria-invalid="false"
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="arbeidsforhold[0].stillingsprosent"
                placeholder="dinSituasjon.arbeidsforhold.stillingsprosentPlaceholder"
                required=""
                type="text"
                value="100%"
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-r1e"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            id="arbeidsforhold[0].forventerEndretInntekt.svar"
          >
            <fieldset
              aria-invalid="false"
              class="sc-dmqHEX hKqYBB navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
            >
              <legend
                class="navds-fieldset__legend navds-label"
              >
                dinSituasjon.arbeidsforhold.forventerEndretInntekt.svar
              </legend>
              <div
                class="navds-radio-buttons"
              >
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    aria-invalid="false"
                    class="navds-radio__input"
                    id="radio-r1h"
                    name="arbeidsforhold[0].forventerEndretInntekt.svar"
                    type="radio"
                    value="radiobuttons.ja"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-r1h"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short"
                      >
                        radiobuttons.ja
                      </span>
                    </span>
                  </label>
                </div>
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    aria-invalid="false"
                    class="navds-radio__input"
                    id="radio-r1i"
                    name="arbeidsforhold[0].forventerEndretInntekt.svar"
                    type="radio"
                    value="radiobuttons.nei"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-r1i"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short"
                      >
                        radiobuttons.nei
                      </span>
                    </span>
                  </label>
                </div>
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    aria-invalid="false"
                    class="navds-radio__input"
                    id="radio-r1j"
                    name="arbeidsforhold[0].forventerEndretInntekt.svar"
                    type="radio"
                    value="radiobuttons.vetIkke"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-r1j"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short"
                      >
                        radiobuttons.vetIkke
                      </span>
                    </span>
                  </label>
                </div>
              </div>
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-fieldset__error"
                id="fieldset-error-r1g"
              />
            </fieldset>
          </div>
        </div>
      </div>
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          + 
          knapp.leggTilArbeidsforhold
        </span>
      </button>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-gueYoa qDReO"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.selvstendig.tittel
        </h1>
      </div>
      <div
        class="navds-panel luft-under navds-panel--border"
      >
        <div
          class="kol-75"
        >
          <div
            class="navds-form-field navds-form-field--medium"
          >
            <label
              class="navds-form-field__label navds-label"
              for="selvstendig[0].beskrivelse"
            >
              dinSituasjon.selvstendig.beskrivelse
            </label>
            <input
              aria-invalid="false"
              class="navds-text-field__input navds-body-short navds-body-medium"
              id="selvstendig[0].beskrivelse"
              required=""
              type="text"
              value=""
            />
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-form-field__error"
              id="textField-error-r2a"
            />
          </div>
        </div>
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            class="navds-form-field navds-form-field--medium"
          >
            <label
              class="navds-form-field__label navds-label"
              for="selvstendig[0].orgnr"
            >
              dinSituasjon.selvstendig.orgnr
            </label>
            <input
              aria-invalid="false"
              class="navds-text-field__input navds-body-short navds-body-medium"
              id="selvstendig[0].orgnr"
              placeholder="dinSituasjon.selvstendig.orgnrplaceholder"
              required=""
              size="25"
              type="text"
              value=""
            />
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-form-field__error"
              id="textField-error-r2b"
            />
          </div>
        </div>
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            id="selvstendig[0].forventerEndretInntekt.svar"
          >
            <fieldset
              aria-invalid="false"
              class="sc-dmqHEX hKqYBB navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
            >
              <legend
                class="navds-fieldset__legend navds-label"
              >
                dinSituasjon.selvstendig.forventerEndretInntekt.svar
              </legend>
              <div
                class="navds-radio-buttons"
              >
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    aria-invalid="false"
                    class="navds-radio__input"
                    id="radio-r2e"
                    name="selvstendig[0].forventerEndretInntekt.svar"
                    type="radio"
                    value="radiobuttons.ja"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-r2e"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short"
                      >
                        radiobuttons.ja
                      </span>
                    </span>
                  </label>
                </div>
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    aria-invalid="false"
                    class="navds-radio__input"
                    id="radio-r2f"
                    name="selvstendig[0].forventerEndretInntekt.svar"
                    type="radio"
                    value="radiobuttons.nei"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-r2f"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short"
                      >
                        radiobuttons.nei
                      </span>
                    </span>
                  </label>
                </div>
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    aria-invalid="false"
                    class="navds-radio__input"
                    id="radio-r2g"
                    name="selvstendig[0].forventerEndretInntekt.svar"
                    type="radio"
                    value="radiobuttons.vetIkke"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-r2g"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short"
                      >
                        radiobuttons.vetIkke
                      </span>
                    </span>
                  </label>
                </div>
              </div>
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-fieldset__error"
                id="fieldset-error-r2d"
              />
            </fieldset>
          </div>
        </div>
      </div>
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          + 
          knapp.leggTilNaeringer
        </span>
      </button>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-gueYoa qDReO"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.utdanning.tittelFullfoert
        </h1>
      </div>
      <div
        id="utdanning.hoyesteFullfoerteUtdanning"
      >
        <div
          class="sc-gueYoa qDReO"
        >
          <fieldset
            aria-invalid="false"
            class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              dinSituasjon.utdanning.hoyesteFullfoerteUtdanning
            </legend>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-r1m"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.grunnskole"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r1m"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.grunnskole
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-r1n"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.videregående"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r1n"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.videregående
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-r1o"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.fagbrev"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r1o"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.fagbrev
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-r1p"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.bachelorgrad"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r1p"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.bachelorgrad
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="navds-radio__input"
                  id="radio-r1q"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.mastergrad"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r1q"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.mastergrad
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-r1r"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.ingen"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r1r"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.ingen
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-r1s"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.annen"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r1s"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.annen
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-r1l"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <fieldset
        class="sc-beqWaB kWPIyU"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.andreYtelser.tittel
        </h1>
        <p
          class="navds-body-long"
        >
          dinSituasjon.andreYtelser.ingress
        </p>
      </fieldset>
      <div
        class="sc-gueYoa qDReO"
      >
        <div
          id="andreYtelser.kravOmAnnenStonad.svar"
        >
          <fieldset
            aria-invalid="false"
            class="sc-dmqHEX hKqYBB navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              dinSituasjon.andreYtelser.kravOmAnnenStonad.svar
            </legend>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-r1v"
                  name="andreYtelser.kravOmAnnenStonad.svar"
                  type="radio"
                  value="radiobuttons.ja"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r1v"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.ja
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-r20"
                  name="andreYtelser.kravOmAnnenStonad.svar"
                  type="radio"
                  value="radiobuttons.nei"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r20"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.nei
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-r1u"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-gueYoa qDReO"
      >
        <div
          id="andreYtelser.annenPensjon.svar"
        >
          <fieldset
            aria-invalid="false"
            class="sc-dmqHEX hKqYBB navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              dinSituasjon.andreYtelser.annenPensjon.svar
            </legend>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-r23"
                  name="andreYtelser.annenPensjon.svar"
                  type="radio"
                  value="radiobuttons.ja"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r23"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.ja
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-r24"
                  name="andreYtelser.annenPensjon.svar"
                  type="radio"
                  value="radiobuttons.nei"
                />
                <label
                  class="navds-radio__label"
                  for="radio-r24"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.nei
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-r22"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        id="andreYtelser.mottarPensjonUtland.svar"
      >
        <fieldset
          aria-invalid="false"
          class="sc-dmqHEX hKqYBB navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        >
          <legend
            class="navds-fieldset__legend navds-label"
          >
            dinSituasjon.andreYtelser.mottarPensjonUtland.svar
          </legend>
          <div
            class="navds-fieldset__description navds-body-long navds-body-long--small"
            id="fieldset-description-r26"
          >
            <div>
              <button
                aria-expanded="false"
                class="sc-irTswW fZoIZZ"
                data-testid="hvorforPanel_toggle"
                type="button"
              >
                <span>
                  hvorforSpoerVi
                </span>
                <span>
                  <svg
                    fill="none"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="navds-radio-buttons"
          >
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-r28"
                name="andreYtelser.mottarPensjonUtland.svar"
                type="radio"
                value="radiobuttons.ja"
              />
              <label
                class="navds-radio__label"
                for="radio-r28"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.ja
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-r29"
                name="andreYtelser.mottarPensjonUtland.svar"
                type="radio"
                value="radiobuttons.nei"
              />
              <label
                class="navds-radio__label"
                for="radio-r29"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.nei
                  </span>
                </span>
              </label>
            </div>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-fieldset__error"
            id="fieldset-error-r26"
          />
        </fieldset>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-hLseeU hbWKgI undefined"
      >
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
    </fieldset>
    <div
      class="sc-hLseeU sc-eDDNvR hbWKgI lgspGR"
    >
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Om den avdøde Snapshot 1`] = `
<div>
  <form>
    <div
      class="sc-gueYoa qDReO"
    >
      <h1
        class="center navds-heading navds-heading--medium"
      >
        dinSituasjon.tittel
      </h1>
    </div>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <h1
        class="navds-heading navds-heading--small"
      >
        dinSituasjon.undertittel
      </h1>
      <p
        class="navds-body-long"
      >
        dinSituasjon.ingress
      </p>
    </fieldset>
    <div
      class="sc-ktEKTO kCFNgi"
      id="jobbStatus"
    >
      <fieldset
        aria-invalid="false"
        class="navds-checkbox-group navds-checkbox-group--medium navds-fieldset navds-fieldset--medium"
      >
        <legend
          class="navds-fieldset__legend navds-label"
        >
          dinSituasjon.jobbStatus
        </legend>
        <div
          class="navds-checkboxes"
        >
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              checked=""
              class="navds-checkbox__input"
              id="checkbox-r1"
              required=""
              type="checkbox"
              value="jobbStatus.arbeidstaker"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r1"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.arbeidstaker
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              class="navds-checkbox__input"
              id="checkbox-r2"
              required=""
              type="checkbox"
              value="jobbStatus.selvstendig"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r2"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.selvstendig
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              class="navds-checkbox__input"
              id="checkbox-r3"
              required=""
              type="checkbox"
              value="jobbStatus.underUtdanning"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r3"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.underUtdanning
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              class="navds-checkbox__input"
              id="checkbox-r4"
              required=""
              type="checkbox"
              value="jobbStatus.arbeidssoker"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r4"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.arbeidssoker
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-checkbox navds-checkbox--medium"
          >
            <input
              aria-invalid="false"
              class="navds-checkbox__input"
              id="checkbox-r5"
              required=""
              type="checkbox"
              value="jobbStatus.ingen"
            />
            <label
              class="navds-checkbox__label"
              for="checkbox-r5"
            >
              <span
                class="navds-checkbox__content"
              >
                <span
                  class="navds-body-short"
                >
                  jobbStatus.ingen
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-fieldset__error"
          id="fieldset-error-r0"
        />
      </fieldset>
    </div>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-gueYoa qDReO"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.arbeidsforhold.tittel
        </h1>
      </div>
      <div
        class="navds-panel luft-under navds-panel--border"
      >
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            class="kol-75"
          >
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="arbeidsforhold[0].arbeidsgiver"
              >
                dinSituasjon.arbeidsforhold.arbeidsgiver
              </label>
              <input
                aria-invalid="false"
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="arbeidsforhold[0].arbeidsgiver"
                required=""
                type="text"
                value="Potetskreller AS"
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-r6"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            class="sc-qRumB jUAonZ"
          >
            <div
              id="arbeidsforhold[0].ansettelsesforhold"
            >
              <div
                class="navds-form-field navds-form-field--medium"
              >
                <label
                  class="navds-form-field__label navds-label"
                  for="textField-r7"
                >
                  dinSituasjon.arbeidsforhold.ansettelsesforhold
                </label>
                <div
                  class="navds-select__container"
                >
                  <select
                    aria-invalid="false"
                    class="navds-select__input navds-body-short navds-body--medium"
                    id="textField-r7"
                  >
                    <option
                      value=""
                    >
                      felles.velg
                    </option>
                    <option
                      value="stillingType.fast"
                    >
                      stillingType.fast
                    </option>
                    <option
                      value="stillingType.midlertidig"
                    >
                      stillingType.midlertidig
                    </option>
                    <option
                      value="stillingType.sesongarbeid"
                    >
                      stillingType.sesongarbeid
                    </option>
                  </select>
                  <svg
                    aria-hidden="true"
                    class="navds-select__chevron"
                    fill="none"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  aria-live="polite"
                  aria-relevant="additions removals"
                  class="navds-form-field__error"
                  id="textField-error-r7"
                />
              </div>
            </div>
            <div
              class="navds-form-field navds-form-field--medium"
            >
              <label
                class="navds-form-field__label navds-label"
                for="arbeidsforhold[0].stillingsprosent"
              >
                dinSituasjon.arbeidsforhold.stillingsprosent
              </label>
              <input
                aria-invalid="false"
                class="navds-text-field__input navds-body-short navds-body-medium"
                id="arbeidsforhold[0].stillingsprosent"
                placeholder="dinSituasjon.arbeidsforhold.stillingsprosentPlaceholder"
                required=""
                type="text"
                value="100%"
              />
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-form-field__error"
                id="textField-error-r9"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-gueYoa qDReO"
        >
          <div
            id="arbeidsforhold[0].forventerEndretInntekt.svar"
          >
            <fieldset
              aria-invalid="false"
              class="sc-dmqHEX hKqYBB navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
            >
              <legend
                class="navds-fieldset__legend navds-label"
              >
                dinSituasjon.arbeidsforhold.forventerEndretInntekt.svar
              </legend>
              <div
                class="navds-radio-buttons"
              >
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    aria-invalid="false"
                    class="navds-radio__input"
                    id="radio-rc"
                    name="arbeidsforhold[0].forventerEndretInntekt.svar"
                    type="radio"
                    value="radiobuttons.ja"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-rc"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short"
                      >
                        radiobuttons.ja
                      </span>
                    </span>
                  </label>
                </div>
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    aria-invalid="false"
                    class="navds-radio__input"
                    id="radio-rd"
                    name="arbeidsforhold[0].forventerEndretInntekt.svar"
                    type="radio"
                    value="radiobuttons.nei"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-rd"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short"
                      >
                        radiobuttons.nei
                      </span>
                    </span>
                  </label>
                </div>
                <div
                  class="radioBorder navds-radio navds-radio--medium"
                >
                  <input
                    aria-invalid="false"
                    class="navds-radio__input"
                    id="radio-re"
                    name="arbeidsforhold[0].forventerEndretInntekt.svar"
                    type="radio"
                    value="radiobuttons.vetIkke"
                  />
                  <label
                    class="navds-radio__label"
                    for="radio-re"
                  >
                    <span
                      class="navds-radio__content"
                    >
                      <span
                        class="navds-body-short"
                      >
                        radiobuttons.vetIkke
                      </span>
                    </span>
                  </label>
                </div>
              </div>
              <div
                aria-live="polite"
                aria-relevant="additions removals"
                class="navds-fieldset__error"
                id="fieldset-error-rb"
              />
            </fieldset>
          </div>
        </div>
      </div>
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          + 
          knapp.leggTilArbeidsforhold
        </span>
      </button>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-gueYoa qDReO"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.utdanning.tittelFullfoert
        </h1>
      </div>
      <div
        id="utdanning.hoyesteFullfoerteUtdanning"
      >
        <div
          class="sc-gueYoa qDReO"
        >
          <fieldset
            aria-invalid="false"
            class="navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              dinSituasjon.utdanning.hoyesteFullfoerteUtdanning
            </legend>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-rh"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.grunnskole"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rh"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.grunnskole
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-ri"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.videregående"
                />
                <label
                  class="navds-radio__label"
                  for="radio-ri"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.videregående
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-rj"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.fagbrev"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rj"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.fagbrev
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-rk"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.bachelorgrad"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rk"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.bachelorgrad
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="navds-radio__input"
                  id="radio-rl"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.mastergrad"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rl"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.mastergrad
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-rm"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.ingen"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rm"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.ingen
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-rn"
                  name="utdanning.hoyesteFullfoerteUtdanning"
                  type="radio"
                  value="utdanning.annen"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rn"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      utdanning.annen
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-rg"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <fieldset
        class="sc-beqWaB kWPIyU"
      >
        <h1
          class="navds-heading navds-heading--small"
        >
          dinSituasjon.andreYtelser.tittel
        </h1>
        <p
          class="navds-body-long"
        >
          dinSituasjon.andreYtelser.ingress
        </p>
      </fieldset>
      <div
        class="sc-gueYoa qDReO"
      >
        <div
          id="andreYtelser.kravOmAnnenStonad.svar"
        >
          <fieldset
            aria-invalid="false"
            class="sc-dmqHEX hKqYBB navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              dinSituasjon.andreYtelser.kravOmAnnenStonad.svar
            </legend>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-rq"
                  name="andreYtelser.kravOmAnnenStonad.svar"
                  type="radio"
                  value="radiobuttons.ja"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rq"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.ja
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-rr"
                  name="andreYtelser.kravOmAnnenStonad.svar"
                  type="radio"
                  value="radiobuttons.nei"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rr"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.nei
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-rp"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-gueYoa qDReO"
      >
        <div
          id="andreYtelser.annenPensjon.svar"
        >
          <fieldset
            aria-invalid="false"
            class="sc-dmqHEX hKqYBB navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
          >
            <legend
              class="navds-fieldset__legend navds-label"
            >
              dinSituasjon.andreYtelser.annenPensjon.svar
            </legend>
            <div
              class="navds-radio-buttons"
            >
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-ru"
                  name="andreYtelser.annenPensjon.svar"
                  type="radio"
                  value="radiobuttons.ja"
                />
                <label
                  class="navds-radio__label"
                  for="radio-ru"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.ja
                    </span>
                  </span>
                </label>
              </div>
              <div
                class="radioBorder navds-radio navds-radio--medium"
              >
                <input
                  aria-invalid="false"
                  class="navds-radio__input"
                  id="radio-rv"
                  name="andreYtelser.annenPensjon.svar"
                  type="radio"
                  value="radiobuttons.nei"
                />
                <label
                  class="navds-radio__label"
                  for="radio-rv"
                >
                  <span
                    class="navds-radio__content"
                  >
                    <span
                      class="navds-body-short"
                    >
                      radiobuttons.nei
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-fieldset__error"
              id="fieldset-error-rt"
            />
          </fieldset>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        id="andreYtelser.mottarPensjonUtland.svar"
      >
        <fieldset
          aria-invalid="false"
          class="sc-dmqHEX hKqYBB navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        >
          <legend
            class="navds-fieldset__legend navds-label"
          >
            dinSituasjon.andreYtelser.mottarPensjonUtland.svar
          </legend>
          <div
            class="navds-fieldset__description navds-body-long navds-body-long--small"
            id="fieldset-description-r11"
          >
            <div>
              <button
                aria-expanded="false"
                class="sc-irTswW fZoIZZ"
                data-testid="hvorforPanel_toggle"
                type="button"
              >
                <span>
                  hvorforSpoerVi
                </span>
                <span>
                  <svg
                    fill="none"
                    focusable="false"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12 17.414 4.293 9.707l1.414-1.414L12 14.586l6.293-6.293 1.414 1.414L12 17.414Z"
                      fill="currentColor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
          <div
            class="navds-radio-buttons"
          >
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-r13"
                name="andreYtelser.mottarPensjonUtland.svar"
                type="radio"
                value="radiobuttons.ja"
              />
              <label
                class="navds-radio__label"
                for="radio-r13"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.ja
                  </span>
                </span>
              </label>
            </div>
            <div
              class="radioBorder navds-radio navds-radio--medium"
            >
              <input
                aria-invalid="false"
                class="navds-radio__input"
                id="radio-r14"
                name="andreYtelser.mottarPensjonUtland.svar"
                type="radio"
                value="radiobuttons.nei"
              />
              <label
                class="navds-radio__label"
                for="radio-r14"
              >
                <span
                  class="navds-radio__content"
                >
                  <span
                    class="navds-body-short"
                  >
                    radiobuttons.nei
                  </span>
                </span>
              </label>
            </div>
          </div>
          <div
            aria-live="polite"
            aria-relevant="additions removals"
            class="navds-fieldset__error"
            id="fieldset-error-r11"
          />
        </fieldset>
      </div>
    </fieldset>
    <fieldset
      class="sc-beqWaB kWPIyU"
    >
      <div
        class="sc-hLseeU hbWKgI undefined"
      >
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            aria-live="polite"
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
    </fieldset>
    <div
      class="sc-hLseeU sc-eDDNvR hbWKgI lgspGR"
    >
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          aria-live="polite"
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
    </div>
  </form>
</div>
`;
